--- a/src/RESTApi/RESTApi.csproj
+++ b/src/RESTApi/RESTApi.csproj
@@ -5,7 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Infraestructure\Infraestructure.csproj" />
     </ItemGroup>
 
 </Project>
