Add database config and model

--- a/src/RESTApi/appsettings.json
+++ b/src/RESTApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Default": "server=alcafre.com;user id=major-user;password=Y]>2xLZ!#*J,jG2?;persistsecurityinfo=True;database=permission-db"
+  },
   "AllowedHosts": "*"
 }
