--- a/src/RESTApi/appsettings.json
+++ b/src/RESTApi/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AutoMigrateDatabase": false,
   "ConnectionStrings": {
     "Default": "server=alcafre.com;user id=major-user;password=Y]>2xLZ!#*J,jG2?;persistsecurityinfo=True;database=permission-db"
   },
