--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -8,4 +8,11 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.3.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
