--- a/src/RESTApi/RESTApi.csproj
+++ b/src/RESTApi/RESTApi.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.1" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.9">
